# Raytracing-Project

./: README.md
examples/: pokeballs.json  snorlax.json
raytracer/: CMakeLists.txt  CMakePresets.json  Doxyfile  vcpkg.json
raytracer/data/: scene.json
raytracer/src/: camera.cpp  camera.h  core.h  csg.cpp  csg.h  geometry.cpp  geometry.h  json_loader.cpp  json_loader.h  main.cpp  scene.cpp  scene.h  shading.cpp  shading.h  tracer.cpp  tracer.h  transform.cpp  transform.h
raytracer/tests/: test_camera.cpp  test_core.cpp  test_csg.cpp  test_geometry.cpp  test_json_loader.cpp
raytracer/tests/tests_data/: simple_scene.json
raytracing/: CMakeLists.txt  scene.txt
raytracing/src/: main.cpp
